Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "# Skewness = -0.0025781248189666343\n",
     "# kurtosis = 0.03976806960642154\n",
-    "x_random"
+    "s = np.random.normal(mu, sigma, N)\n"
    ]
   },
   {
