Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,6 +83,8 @@
     "\n",
     "# Skewness = -0.0025781248189666343\n",
     "# kurtosis = 0.03976806960642154\n",
+    "s = np.random.normal(mu, sigma, N)\n",
+    "\n",
     "s = np.random.normal(mu, sigma, N)"
    ]
   },
