--- a/index.ipynb
+++ b/index.ipynb
@@ -79,13 +79,12 @@
     }
    ],
    "source": [
-    "x_random = np.random(10000)\n",
+    "x_random = np.random.normal(mu, sigma, N)\n",
     "\n",
     "# Skewness = -0.0025781248189666343\n",
     "# kurtosis = 0.03976806960642154\n",
     "mu, sigma = 0, 2\n",
-    "N = \"auto\"\n",
-    "s = np.random.normal(mu, sigma, N)"
+    "N = \"auto\"\n"
    ]
   },
   {
