--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,8 @@
     "\n",
     "# Skewness = -0.0025781248189666343\n",
     "# kurtosis = 0.03976806960642154\n",
-    "x_random\n"
+    "x_random\n",
+    "\n"
    ]
   },
   {
