Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
     "# kurtosis = 0.03976806960642154\n",
     "x_random\n",
     "\n",
-    "plt.hist(x_random)"
+    "plt.hist(x_random, )"
    ]
   },
   {
