--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -125,7 +125,7 @@
     "# kurtosis = 0.03976806960642154\n",
     "x_random\n",
     "\n",
-    "plt.hist(x_random, 100, normed = T)"
+    "plt.hist(x_random, 100)"
    ]
   },
   {
