--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "mu, sigma = 0, 2\n",
     "#N = \"auto\"\n",
-    "x_random = np.random.normal(mu, sigma)\n",
+    "x_random = np.random.normal(mu, sigma, 10000)\n",
     "\n",
     "# Skewness = -0.0025781248189666343\n",
     "# kurtosis = 0.03976806960642154\n",
