Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,8 @@
     "# kurtosis = 0.03976806960642154\n",
     "x_random\n",
     "\n",
-    "# plt.hist(x_random, 100, normed = True)"
+    "# plt.hist(x_random, 100, normed = True)\n",
+    "plt.hist(x_random, 100, normed = True)"
    ]
   },
   {
