Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,8 @@
     "x_random\n",
     "\n",
     "# plt.hist(x_random, 100, normed = True)\n",
-    "plt.hist(x_random)"
+    "plt.hist(x_random)\n",
+    "kurt"
    ]
   },
   {
