Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,6 +100,7 @@
     "\n",
     "# plt.hist(x_random, 100, normed = True)\n",
     "plt.hist(x_random)\n",
+    "kurtosis(x_random)\n",
     "kurtosis(x_random)"
    ]
   },
