--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
    ],
    "source": [
     "plt.hist(y)\n",
-    "skewness()\n",
+    "skewness(y)\n",
     "# Skewness = 1.109511549276228\n",
     "# kurtosis = -0.31039027765889804"
    ]
