Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.109511549276228"
+       "-0.31039027765889804"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -183,7 +183,7 @@
    "source": [
     "plt.hist(y)\n",
     "skew(y)\n",
-    "kurtosis()\n",
+    "kurtosis(y)\n",
     "# Skewness = 1.109511549276228\n",
     "# kurtosis = -0.31039027765889804"
    ]
